# Hotel-Reservation

./: .gitignore  README.md  celery_beat.sh  celery_worker.sh  conftest.py  manage.py  pyproject.toml
hotel_reservation/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
reservations/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_remove_room_hotel_remove_reservation_room_and_more.py  0003_initial.py  0004_populate_demo_data.py  0005_alter_hotel_admin.py
reservations/models/: __init__.py  base_models.py  hotel.py  models.py  reservation.py  room.py
reservations/tests/: test_hotel.py  test_login.py
reservations/views/: __init__.py  hotel.py  login_user.py  register_user.py  room_details.py
